# oc-dogs-cv-dl

./: .gitignore  IMAGE_PROCESSING_README.md  ISAKOV_Kiril_1_notebook_prétraitement_032026.ipynb  ISAKOV_Kiril_2_notebook_model_from_scratch_032026.ipynb  README.md  accessing_training_history.md  example_usage.py  functions.py  functions_img_preprocessing.py  functions_model_from_scratch.py  grid_search_model.py  pyproject.toml  test_functions.py
