[project]
name = "oc-dogs"
version = "0.1.0"
description = "Classification d'images à l'aide d'algorithmes de Deep Learning"
authors = [{ name = "Kiril Isakov", email = "kirix.isakov@gmail.com" }]
requires-python = ">=3.12,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "lxml (>=6.0.2,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[dependency-groups]
dev = [
    "ipython (>=9.11.0,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
]
dl = [
    "keras (>=3.14.0,<4.0.0)",
    "keras-cv (>=0.9.0,<0.10.0)",
    "keras-hub (>=0.27.1,<0.28.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu132"
default = false
